fix: reset animal step grid holder overflowing

--- a/src/components/favorite-animal-questionnaire-step/favorite-animal-questionnaire-step.css
+++ b/src/components/favorite-animal-questionnaire-step/favorite-animal-questionnaire-step.css
@@ -2,7 +2,6 @@
 }
 
 .FavoriteAnimalQuesitonnaireStep-gridHolder {
-  overflow: hidden;
 }
 
 @media (max-width: 640px) {
